--- a/write.html
+++ b/write.html
@@ -8,7 +8,6 @@
   <title>Document</title>
   <link rel="stylesheet" href="./css/write.css" />
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-
 </head>
 
 <body>
@@ -22,18 +21,15 @@
           <label for="name">이름</label>
           <input id="name" class="write-container-space250" type="text" placeholder="이름을 입력해주세요" />
         </div>
-
         <div class="write-container side-margin50">
           <label for="pw">비밀번호</label>
           <input id="pw" class="write-container-space280" type="password" placeholder="비밀번호를 입력해주세요" />
         </div>
-
         <div class="write-container">
           <label for="mbti">MBTI</label>
           <input id="mbti" class="write-container-space130" type="text" placeholder="MBTI" />
         </div>
       </div>
-
       <div class="write-container-img">
         <label for="img">사진</label>
         <input id="img" class="write-container-input-file" type="file" accept="image/*" />
@@ -41,27 +37,22 @@
           <img id="thumbnail" alt="..." src="./svg/image-regular.svg" />
         </div>
       </div>
-
       <div class="write-container">
         <label for="blog">블로그 주소</label>
         <input id="blog" class="write-container-space500" type="text" placeholder="블로그 주소를 입력해주세요" />
       </div>
-
       <div class="write-container">
         <label for="github">깃허브 주소</label>
         <input id="github" class="write-container-space500" type="text" placeholder="깃허브 주소를 입력해주세요" />
       </div>
-
       <div class="write-container">
         <label for="word">한마디</label>
         <input id="word" class="write-container-spaceAll" type="text" placeholder="한마디를 적어주세요" />
       </div>
-
       <div class="write-container">
         <label for="intro">자기소개</label>
         <textarea id="intro" placeholder="자기소개를 적어주세요"></textarea>
       </div>
-
       <div class="write-footer">
         <button id="introBtn" class="write-footer-introBtn" type="button">소개하기</button>
         <button id="cancleBtn" class="write-footer-cancleBtn" type="button"
@@ -70,8 +61,8 @@
     </form>
 </body>
 </main>
-
 <script type="module">
+
   $("#thumbnail").on("click", function () {
     $("#img").click();
   })
@@ -81,38 +72,31 @@
   import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
   import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
   import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-
+  import { getStorage, ref, uploadBytes, getDownloadURL, uploadBytesResumable } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-storage.js";
+  import { query, where } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+  import { doc, updateDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
   // Firebase 구성 정보 설정
-  // const firebaseConfig = {
-  //   apiKey: "AIzaSyDAEstAPrTLK7i9ryDBLy5yyKf9msmDdo8",
-  //   authDomain: "object-74938.firebaseapp.com",
-  //   projectId: "object-74938",
-  //   storageBucket: "object-74938.appspot.com",
-  //   messagingSenderId: "330048303032",
-  //   appId: "1:330048303032:web:2f7e6c5e27823610c3294d",
-  //   measurementId: "G-FEFD4LMS9N"
-  // };
   const firebaseConfig = {
-    apiKey: "AIzaSyC5fyxcmxqsTSQQf8fDUGSXrBnloDB6aYA",
-    authDomain: "sparta-5784d.firebaseapp.com",
-    projectId: "sparta-5784d",
-    storageBucket: "sparta-5784d.appspot.com",
-    messagingSenderId: "853122067267",
-    appId: "1:853122067267:web:a0ca2f1cd399c002751df6"
+    apiKey: "AIzaSyDAEstAPrTLK7i9ryDBLy5yyKf9msmDdo8",
+    authDomain: "object-74938.firebaseapp.com",
+    databaseURL: "https://object-74938-default-rtdb.asia-southeast1.firebasedatabase.app",
+    projectId: "object-74938",
+    storageBucket: "object-74938.appspot.com",
+    messagingSenderId: "330048303032",
+    appId: "1:330048303032:web:2f7e6c5e27823610c3294d",
+    measurementId: "G-FEFD4LMS9N"
   };
-
 
   // Firebase 인스턴스 초기화
   const app = initializeApp(firebaseConfig);
   const db = getFirestore(app);
+  const storage = getStorage(app);
 
   $("#introBtn").click(async function () {
-    
     var name = $('#name').val().trim();
     var pw = $('#pw').val().trim();
     var mbti = $('#mbti').val().trim();
-    var img = $('#img').val().trim();
     var blog = $('#blog').val().trim();
     var github = $('#github').val().trim();
     var word = $('#word').val().trim();
@@ -135,27 +119,34 @@
 
     let [date, id] = getDateFormat();
 
-    //유효성 검사
-    if (name === "" || pw === "" || mbti === "" || img === "" || blog === "" || github === "" || word === "" || intro === "") {
+    // 이미지 파일 가져오기
+    var file = $("#img").prop("files")[0];
+
+    // 유효성 검사
+    if (name === "" || pw === "" || mbti === "" || file === undefined || blog === "" || github === "" || word === "" || intro === "") {
       alert("빈칸을 입력해주세요.");
       return;
     }
+    // 이미지 파일을 Firebase Storage에 업로드
+    const storageRef = ref(storage, `images/${id}`);
+    await uploadBytes(storageRef, file);
 
-    let doc = {
-      'name': name,
-      'pw': pw,
-      'mbti': mbti,
-      'img': img,
-      'blog': blog,
-      'github': github,
-      'word': word,
-      'intro': intro,
-      "date": date,
-      "id": id
-    };
+    // 업로드한 이미지의 다운로드 URL 가져오기
+    const imgUrl = await getDownloadURL(storageRef);
 
+    // Firestore에 데이터 추가
     try {
-      await addDoc(collection(db, "post"), doc);
+      await addDoc(collection(db, "post"), {
+        name: name,
+        pw: pw,
+        mbti: mbti,
+        img: imgUrl,
+        blog: blog,
+        github: github,
+        word: word,
+        intro: intro,
+        id: id
+      });
       alert('저장 완료');
       window.location.reload();
     } catch (error) {
@@ -163,22 +154,15 @@
     }
   })
 
-
-  //이미지 파일 미리보기
+  // 이미지 파일 미리보기
   $("#img").on("change", function (event) {
-
     var file = event.target.files[0];
-
     var reader = new FileReader();
     reader.onload = function (e) {
-
       $("#thumbnail").attr("src", e.target.result);
     }
-
     reader.readAsDataURL(file);
   });
-
 </script>
-
 
 </html>
