--- a/index.html
+++ b/index.html
@@ -61,110 +61,6 @@
                         <div><a>https://velog.io/</a></div>
                     </div>
                 </li> -->
-
-                <!-- <li class="section-member-card">
-                    <div>
-                        <div class="section-member-card-img">
-                            <img alt="..." src="./svg/image-regular.svg" />
-                        </div>
-                        <div class="section-member-card-member">
-                            <div class="section-member-card-member-info">
-                                <div class="section-member-card-member-info-name">이름</div>
-                                <span class="side-margin10">·</span>
-                                <div class="section-member-card-member-info-mbti">MBTI</div>
-                            </div>
-                            <div class="section-member-card-member-date">2024-03-02</div>
-                        </div>
-                        <div class="section-member-card-intro">
-                            <div class="section-member-card-intro-word">한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디</div>
-                            <div class="section-member-card-intro-intro">
-                                자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개
-                            </div>
-                        </div>
-                    </div>
-                    <div class="section-member-card-site">
-                        <div class="newtest"><a>https://github.com/</a></div>
-                        <div><a>https://velog.io/</a></div>
-                    </div>
-                </li>
-
-                <li class="section-member-card">
-                    <div>
-                        <div class="section-member-card-img">
-                            <img alt="..." src="./svg/image-regular.svg" />
-                        </div>
-                        <div class="section-member-card-member">
-                            <div class="section-member-card-member-info">
-                                <div class="section-member-card-member-info-name">이름</div>
-                                <span class="side-margin10">·</span>
-                                <div class="section-member-card-member-info-mbti">MBTI</div>
-                            </div>
-                            <div class="section-member-card-member-date">2024-03-02</div>
-                        </div>
-                        <div class="section-member-card-intro">
-                            <div class="section-member-card-intro-word">한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디</div>
-                            <div class="section-member-card-intro-intro">
-                                자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개
-                            </div>
-                        </div>
-                    </div>
-                    <div class="section-member-card-site">
-                        <div class="newtest"><a>https://github.com/</a></div>
-                        <div><a>https://velog.io/</a></div>
-                    </div>
-                </li>
-
-                <li class="section-member-card">
-                    <div>
-                        <div class="section-member-card-img">
-                            <img alt="..." src="./svg/image-regular.svg" />
-                        </div>
-                        <div class="section-member-card-member">
-                            <div class="section-member-card-member-info">
-                                <div class="section-member-card-member-info-name">이름</div>
-                                <span class="side-margin10">·</span>
-                                <div class="section-member-card-member-info-mbti">MBTI</div>
-                            </div>
-                            <div class="section-member-card-member-date">2024-03-02</div>
-                        </div>
-                        <div class="section-member-card-intro">
-                            <div class="section-member-card-intro-word">한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디</div>
-                            <div class="section-member-card-intro-intro">
-                                자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개
-                            </div>
-                        </div>
-                    </div>
-                    <div class="section-member-card-site">
-                        <div class="newtest"><a>https://github.com/</a></div>
-                        <div><a>https://velog.io/</a></div>
-                    </div>
-                </li>
-
-                <li class="section-member-card">
-                    <div>
-                        <div class="section-member-card-img">
-                            <img alt="..." src="./svg/image-regular.svg" />
-                        </div>
-                        <div class="section-member-card-member">
-                            <div class="section-member-card-member-info">
-                                <div class="section-member-card-member-info-name">이름</div>
-                                <span class="side-margin10">·</span>
-                                <div class="section-member-card-member-info-mbti">MBTI</div>
-                            </div>
-                            <div class="section-member-card-member-date">2024-03-02</div>
-                        </div>
-                        <div class="section-member-card-intro">
-                            <div class="section-member-card-intro-word">한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디한마디</div>
-                            <div class="section-member-card-intro-intro">
-                                자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개자기소개
-                            </div>
-                        </div>
-                    </div>
-                    <div class="section-member-card-site">
-                        <div class="bottom-margin10"><a>https://github.com/</a></div>
-                        <div><a>https://velog.io/</a></div>
-                    </div>
-                </li>-->
             </ul>
         </section>
     </main>
@@ -210,64 +106,22 @@
         <div class="section-guest-container">
             <div class="section-guest-container-flex">
                 <div>
-                    <label for="name">이름</label>
+                    <label for="name" class="section-guest-lable1">이름</label>
                     <input id="name" type="text" placeholder="이름" />
+                    <label for="pw" class="section-guest-lable2">비밀번호</label>
+                    <input id="pw" type="password" placeholder="비밀번호" />
                 </div>
                 <div>
-                    <label for="comment">방명록</label>
+                    <label for="comment" class="section-guest-lable1">방명록</label>
                     <textarea id="comment" placeholder="방명록을 입력해주세요"></textarea>
                 </div>
             </div>
-            <div id="Writingbtn" class="section-guest-container-btn">
-                <button class="section-guest-container-btn-add">등록하기</button>
+            <div class="section-guest-container-btn">
+                <button id="registerBtn" class="section-guest-container-btn-add">등록하기</button>
             </div>
-            <section class="section-reply">
-                <ul id="guestbox" class="section-reply-list">
-                    <div class="section-reply-list-container">
-                        <div class="section-reply-list-container-flex">
-                </ul>
         </div>
 
-        <ul class="section-guest-list">
-            <!-- <li>
-                <div class="section-guest-list-container">
-                    <div class="section-guest-list-container-flex">
-                        <div class="section-guest-list-name">유균한</div>
-                        <span class="side-margin10">·</span>
-                        <div class="section-guest-list-date">2024-02-05</div>
-                    </div>
-                    <div class="section-guest-list-content">
-                        댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다
-                    </div>
-                </div>
-            </li>
-
-            <li>
-                <div class="section-guest-list-container">
-                    <div class="section-guest-list-container-flex">
-                        <div class="section-guest-list-name">유균한</div>
-                        <span class="side-margin10">·</span>
-                        <div class="section-guest-list-date">2024-02-05</div>
-                    </div>
-                    <div class="section-guest-list-content">
-                        댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다
-                    </div>
-                </div>
-            </li>
-
-            <li>
-                <div class="section-guest-list-container">
-                    <div class="section-guest-list-container-flex">
-                        <div class="section-guest-list-name">유균한</div>
-                        <span class="side-margin10">·</span>
-                        <div class="section-guest-list-date">2024-02-05</div>
-                    </div>
-                    <div class="section-guest-list-content">
-                        댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다댓글내용입니다
-                    </div>
-                </div>
-            </li> -->
-        </ul>
+        <ul id="guestList" class="section-guest-list"></ul>
     </section>
 
     <script type="module">
@@ -276,7 +130,7 @@
         import { getFirestore } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
         import { collection, addDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
         import { getDocs } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
-        import { query } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
+        import { query, where, orderBy, doc, deleteDoc, setDoc } from "https://www.gstatic.com/firebasejs/9.22.0/firebase-firestore.js";
 
         // Firebase 구성정보 설정
         const firebaseConfig = {
@@ -296,6 +150,21 @@
         const db = getFirestore(app);
 
         history.scrollRestoration = "manual";
+
+        function getDateFormat() {
+
+            let now = new Date();
+            let year = now.getFullYear();
+            let month = now.getMonth() + 1 < 10 ? `0${now.getMonth() + 1}` : now.getMonth() + 1;
+            let date = now.getDate() < 10 ? `0${now.getDate()}` : now.getDate();
+            let hours = now.getHours() < 10 ? `0${now.getHours()}` : now.getHours();
+            let min = now.getMinutes() < 10 ? `0${now.getMinutes()}` : now.getMinutes();
+            let sec = now.getSeconds() < 10 ? `0${now.getSeconds()}` : now.getSeconds();
+            let today = `${year}-${month}-${date}`;
+            let id = `${year}${month}${date}${hours}${min}${sec}`;
+
+            return [today, id];
+        }
 
         function scrollSmooth(destination, duration) {
 
@@ -348,8 +217,8 @@
 
         });
         // //Firebase에서 게시물 정보 가져와서 게시물 붙이기
-        let doc = await getDocs(collection(db, "post"));
-        doc.forEach((doc) => {
+        let newDoc = await getDocs(collection(db, "post"));
+        newDoc.forEach((doc) => {
             let row = doc.data();
 
             let img = row['img'];
@@ -361,7 +230,6 @@
             let github = row['github'];
             let blog = row['blog'];
             let id = row['id'];
-            console.log(row);
 
             // <li>태그 사용 시 <Ul>태그에 id=""값 주기!!
             let temp_html = `
@@ -408,6 +276,188 @@
                 }
             });
         });
+
+        const q = query(collection(db, "guest"), orderBy("id"));
+        let guestList = await getDocs(q);
+
+        guestList.forEach((el) => {
+
+            let data = el.data();
+
+            let html = `<li id=${data.id}>
+                <div class="section-guest-list-container">
+                    <div class="section-guest-list-container-flex">
+                        <div class="section-guest-list-name">${data.name}</div>
+                        <span class="side-margin10">·</span>
+                        <div class="section-guest-list-date">${data.date}</div>
+                        <button type="button">삭제</button>
+                    </div>
+                    <div class="section-guest-list-content">
+                        ${data.comment}
+                    </div>
+                    <div class="main-guest-modal">
+                        <div>
+                          <input type="password" placeholder="비밀번호를 입력해주세요" />
+                        </div>
+                        <div class="main-guest-modal-flex">
+                          <button id="guestModalCancle" class="main-guest-modal-cancle">취소</button>
+                          <button id="guestModalCheck" class="main-guest-modal-check">확인</button>
+                        </div>
+                    </div>
+                </div>
+            </li>`;
+
+            $("#guestList").append(html);
+
+        });
+
+        $("#registerBtn").on("click", async function () {
+
+            let name = $("#name").val();
+            let pw = $("#pw").val();
+            let comment = $("#comment").val();
+
+            if (!name || !comment || !pw) {
+                alert("이름, 비밀번호, 방명록을 모두 입력해주세요");
+
+                return
+            }
+
+            let [date, id] = getDateFormat();
+            let data = {
+                "id": id,
+                "pw": pw,
+                "name": name,
+                "comment": comment,
+                "date": date,
+            };
+
+            await setDoc(doc(db, "guest", id), data);
+
+            let html = `<li id=${data.id}>
+                <div class="section-guest-list-container">
+                    <div class="section-guest-list-container-flex">
+                        <div class="section-guest-list-name">${data.name}</div>
+                        <span class="side-margin10">·</span>
+                        <div class="section-guest-list-date">${data.date}</div>
+                        <button type="button">삭제</button>
+                    </div>
+                    <div class="section-guest-list-content">
+                        ${data.comment}
+                    </div>
+                    <div class="main-guest-modal">
+                        <div>
+                          <input type="password" placeholder="비밀번호를 입력해주세요" />
+                        </div>
+                        <div class="main-guest-modal-flex">
+                          <button id="guestModalCancle" class="main-guest-modal-cancle">취소</button>
+                          <button id="guestModalCheck" class="main-guest-modal-check">확인</button>
+                        </div>
+                    </div>
+                </div>
+            </li>`;
+
+            $("#guestList").append(html);
+            $("#name").val("");
+            $("#pw").val("");
+            $("#comment").val("");
+
+            $("#guestList > li div.section-guest-list-container-flex > button").on("click", function () {
+                $(this).parent().parent().find(".main-guest-modal").show();
+                $("#guestList > li div.section-guest-list-container-flex > button").attr("disabled", true);
+
+                $(this).parent().parent().find(".main-guest-modal > div.main-guest-modal-flex > button.main-guest-modal-cancle").on("click", function () {
+                    $(this).parent().parent().hide();
+                    $("#guestList > li div.section-guest-list-container-flex > button").attr("disabled", false);
+                });
+
+                $(this).parent().parent().find(".main-guest-modal > div.main-guest-modal-flex > button.main-guest-modal-check").on("click", async function () {
+
+                    let pw = $(this).parent().parent().find("input").val();
+                    let id = $(this).parent().parent().parent().parent().attr("id");
+
+                    if (!pw) {
+                        alert("비밀번호를 입력해주세요");
+
+                        return
+                    }
+
+                    let check = false;
+                    const q = query(
+                        collection(db, "guest"),
+                        where("id", "==", id),
+                        where("pw", "==", pw)
+                    );
+                    let result = await getDocs(q);
+
+                    result.forEach((el) => {
+                        if (el.data()) {
+                            check = true;
+                        }
+                    });
+
+                    if (!check) {
+                        alert("비밀번호가 일치하지 않습니다");
+
+                        return
+                    }
+
+                    await deleteDoc(doc(db, "guest", id));
+                    $(this).parent().parent().parent().parent().remove();
+
+                });
+
+            });
+
+        });
+
+        $("#guestList > li div.section-guest-list-container-flex > button").on("click", function () {
+            $(this).parent().parent().find(".main-guest-modal").show();
+            $("#guestList > li div.section-guest-list-container-flex > button").attr("disabled", true);
+
+            $(this).parent().parent().find(".main-guest-modal > div.main-guest-modal-flex > button.main-guest-modal-cancle").on("click", function () {
+                $(this).parent().parent().hide();
+                $("#guestList > li div.section-guest-list-container-flex > button").attr("disabled", false);
+            });
+
+            $(this).parent().parent().find(".main-guest-modal > div.main-guest-modal-flex > button.main-guest-modal-check").on("click", async function () {
+
+                let pw = $(this).parent().parent().find("input").val();
+                let id = $(this).parent().parent().parent().parent().attr("id");
+
+                if (!pw) {
+                    alert("비밀번호를 입력해주세요");
+
+                    return
+                }
+
+                let check = false;
+                const q = query(
+                    collection(db, "guest"),
+                    where("id", "==", id),
+                    where("pw", "==", pw)
+                );
+                let result = await getDocs(q);
+
+                result.forEach((el) => {
+                    if (el.data()) {
+                        check = true;
+                    }
+                });
+
+                if (!check) {
+                    alert("비밀번호가 일치하지 않습니다");
+
+                    return
+                }
+
+                await deleteDoc(doc(db, "guest", id));
+                $(this).parent().parent().parent().parent().remove();
+
+            });
+
+        });
+
     </script>
 </body>
 
